@@ -1,3 +1,14 @@
+2017-08-03  Joseph Pecoraro  <pecoraro@apple.com>
+
+        JSContext Inspector: Recording tab should not be available in New Tab picker
+        https://bugs.webkit.org/show_bug.cgi?id=175155
+
+        Reviewed by Brian Burg.
+
+        * UserInterface/Views/RecordingTabContentView.js:
+        (WI.RecordingTabContentView.isTabAllowed):
+        Only allow the Recording Tab if we have a CanvasAgent.
+
 2017-08-02  Devin Rousso  <drousso@apple.com>
 
         Web Inspector: add stack trace information for each RecordingAction
